# gnn-learning

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  gnn_example.py  gnn_streamlit.py  main.py  pyproject.toml  requirements.txt  setup.sh  simple_test.py  streamlit_requirements.txt  test_gnn.py  test_recommendation_core.py  test_streamlit_import.py  verify_gnn.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: streamlit_app.py  utils.py
src/gnn_learning/data/: generator.py  loader.py
src/gnn_learning/evaluation/: evaluator.py
src/gnn_learning/models/: gcn.py  lightgcn.py
src/gnn_learning/training/: trainer.py
src/gnn_learning/visualization/: visualizer.py
tests/: __init__.py  conftest.py  test_data.py  test_evaluation.py  test_gnn.py  test_models.py  test_recommendation_core.py  test_training.py
